work on dose drop down and post

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,12 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -19,15 +13,51 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* PILLBOX */
+.pillbox-contain{
+  margin: 0 auto;
+  height: 350px;
+  width: 275px;
+  display: flex;
+  flex-direction: column;
+  background-color: blue;
+  border-radius: 15px;
+  padding: 10px;
+  justify-content: space-around;
+}
+.pillbox-segment{
+  height: 75px;
+  width: 90%;
+  margin: 0 auto;
+  border-radius: 15px;
+  background-color: red;
+  justify-content: space-around;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* ADD PILL DROPDOWN */
+.add-pill{
+  height: auto;
+ 
+}
+.dd-wrapper{
+  width: 300px;
+  border: black 1px solid;
+  margin: 0 auto;
+}
+.dd-header{
+  height: auto;
+  border-bottom: black 1px solid;
+}
+.dd-title{
+  font-weight: 500;
+}
+.dd-list{
+  height: 200px;
+  overflow: scroll;
+}
+.dd-list-item{
+  height: auto;
+  padding-top: 20px;
+  list-style: none;
+  text-align: left;
 }
