--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,18 +40,21 @@
   border-top: 2px solid white;
   border-bottom: 2px solid white;
 }
-.welcome-contain{
+.welcome-Contain{
   height: 100%;
-  padding-top: 15%;
+  padding-top: 1%;
   margin-top: 0;
+  margin-bottom: 5%;
 }
 .welcome-h2{
   margin: 0;
   color: black;
   padding-top: 10%;
+  font-size: 2.5em;
 }
 .welcome-p{
   color: black;
+  font-size: 1.5em;
 }
 
 /* LOGIN AND REGISTER */
@@ -59,11 +62,14 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  padding-bottom: 10%;
 }
 .auth-container{
   width: 30%;
   border: 2px solid white;
   border-radius: 15px;
+  font-size: 1.25em;
+  font-weight: 600;
 }
 
 /* PILLBOX */
