--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,8 +27,9 @@
   background-color: #005D59;
   color: white;
   font-size: 1em;
-  padding: 1em;
   font-weight: 500;
+  padding-right: 1em;
+  padding-left: 1em;
 }
 .headerP{
   color: black;
@@ -63,11 +64,18 @@
   flex-direction: row;
   justify-content: space-around;
   padding-bottom: 10%;
+
 }
 .auth-container{
-  width: 30%;
+  width: 50%;
   border: 2px solid white;
   border-radius: 15px;
+  font-size: 1.25em;
+  font-weight: 600;
+  background-color: #BEFBFF;
+}
+
+.login-p{
   font-size: 1.25em;
   font-weight: 600;
 }
