--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,18 @@
 }
 
 /* HEADER */
+.title{
+  margin: 0;
+  color: #B8FB3C;
+  font-size: 2.5em;
+}
+.top-page{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
+  margin-right: 2%;
+}
 .login{
   width: 100%;
   height: 10%;
@@ -14,33 +26,37 @@
 }
 .headerButton-contain{
   width: 100%;
-  margin: 0 auto;
+  margin: 0 auto 1% auto;
+  padding-top: 1%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: left;
+  align-items: baseline;
 }
 .headerButton{
   height: 50px;
   min-width: 100px;
   margin: 1em;
   border-radius: 15px;
-  background-color: #7898FB;
+  background-color: #7898fb;
   color: #001437;
   font-size: 1em;
-  font-weight: 500;
+  font-weight: 600;
   padding-right: 1em;
   padding-left: 1em;
-  border: 2px solid #001437;
+  border: 2px solid #B8FB3C;
 }
 .headerP{
-  color: black;
-  font-size: 1.5em;
+  color: #FEC763;
+  font-size: 1.75em;
   margin: 1%;
+  font-weight: 600;
 }
 .headerP-contain{
-  background-color: #DDCDE5;
-  border-top: 2px solid white;
-  border-bottom: 2px solid white;
+  background-color: #00207F;
+  border-top: 2px solid #EA55B1;
+  border-bottom: 2px solid #EA55B1;
+  padding: 1%;
 }
 .welcome-Contain{
   height: 100%;
@@ -77,6 +93,9 @@
 }
 .registerForm{
   align-content: right;
+}
+.headerButton.auth{
+  border: 2px solid #001437;
 }
 .register-div{
   width: 75%;
@@ -140,6 +159,7 @@
   width: 50%;
   border: 2px solid white;
   border-radius: 15px;
+  border: 2px;
   background-color: #9BD3AC;
   color: #00391B;
   font-weight: 500;
