--- a/client/src/App.css
+++ b/client/src/App.css
@@ -387,12 +387,46 @@ li{
 }
 .modal-main{
   position:fixed;
-  background: white;
-  width: 80%;
+  background: #C1CffC;
+  width: 50%;
   height: auto;
   top:50%;
   left:50%;
   transform: translate(-50%,-50%);
+  border-radius: 15px;
+  border: 2px solid #EA55B1;
+}
+.modal-header{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 1.25em;
+  margin: 3%;
+  padding-bottom: 2%;
+  border-bottom: 2px solid black;
+  color: #EA55B1;
+  font-weight: 600;
+}
+.modal-x{
+  font-size: 1em;
+  color: #EA55B1;
+  background-color: #001437;
+  border-radius: 5px;
+}
+.modal-body{
+  height: 3em;
+  margin-top: 3em;
+  font-size: 1.5em;
+  
+}
+.modal-delete{
+  font-size: 1.5em;
+  border-radius: 15px;
+  border: 2px solid #EA55B1;
+  margin-bottom: 1em;
+  padding: 1em;
+  background-color: #6576EA;
+  color: white;
 }
 .display-block{
   display: block;
